# mantra-releases

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Makefile  README.md  README.zh-CN.md  README_zh.md  _test_sync.md  _test_update.md  eslint.config.js  index.html  package.json  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/sanitizer/: extended_tests.txt
src-tauri/src/: error.rs  lib.rs
src-tauri/src/analytics/: calculator.rs  calculator_tests.rs  mod.rs  types.rs  types_tests.rs
src-tauri/src/commands/: analytics.rs  gateway.rs  git.rs  import.rs  local_server.rs  mcp.rs  mod.rs  parser.rs  project.rs  sanitizer.rs  tray.rs  tree.rs
src-tauri/src/commands/import/: tests.rs
src-tauri/src/commands/mcp/: config.rs  config_path.rs  env.rs  mod.rs  runtime.rs  service.rs  takeover.rs  tools.rs
src-tauri/src/commands/project/: tests.rs
src-tauri/src/gateway/: aggregator.rs  auth.rs  error.rs  handlers.rs  http_forwarder.rs  http_transport.rs  lpm_query.rs  mod.rs  origin.rs  policy.rs  process_manager.rs  project_services_query.rs  router.rs  server.rs  session.rs  state.rs  tests.rs
src-tauri/src/gateway/aggregator/: tests.rs
src-tauri/src/gateway/handlers/: health.rs  legacy.rs  mcp_streamable.rs  methods.rs  mod.rs  tests.rs
src-tauri/src/gateway/router/: tests.rs
src-tauri/src/gateway/session/: tests.rs
src-tauri/src/git/: error.rs  mod.rs  time_machine.rs  utils.rs
src-tauri/src/git/time_machine/: tests.rs
src-tauri/src/local_server/: config.rs  handlers.rs  mod.rs  server.rs  tests.rs
src-tauri/src/models/: mcp.rs  mod.rs  project.rs  session.rs
src-tauri/src/models/mcp/: tests.rs
src-tauri/src/models/project/: tests.rs
src-tauri/src/models/session/: content_block.rs  mod.rs  standard_tool.rs  types.rs
src-tauri/src/parsers/: claude.rs  error.rs  error_tests.rs  mod.rs  test_real_file.rs  tests.rs
src-tauri/src/parsers/claude/: mod.rs  path.rs  path_tests.rs  tests.rs  types.rs
src-tauri/src/parsers/codex/: mod.rs  path.rs  path_tests.rs  tests.rs  types.rs  types_tests.rs
src-tauri/src/parsers/cursor/: db.rs  db_tests.rs  mod.rs  path.rs  path_tests.rs  tests.rs  types.rs  types_tests.rs
src-tauri/src/parsers/gemini/: mod.rs  path.rs  path_tests.rs  tests.rs  types.rs  types_tests.rs
src-tauri/src/sanitizer/: config.rs  engine.rs  error.rs  extended_tests.rs  mod.rs  patterns.rs  record.rs  scanner.rs  tests.rs
src-tauri/src/sanitizer/scanner/: tests.rs
src-tauri/src/scanner/: mod.rs  project_scanner.rs
src-tauri/src/services/: atomic_fs.rs  env_manager.rs  mcp_config.rs  mcp_registry.rs  mcp_tool_discovery.rs  mod.rs  takeover_transaction.rs
src-tauri/src/services/env_manager/: tests.rs
src-tauri/src/services/mcp_adapters/: claude.rs  codex.rs  common.rs  cursor.rs  gemini.rs  mod.rs
src-tauri/src/services/mcp_config/: backup.rs  executor.rs  mod.rs  parsers.rs  preview.rs  scanner.rs  (+3 more)
src-tauri/src/storage/: database.rs  error.rs  gateway.rs  interception.rs  mcp_service.rs  migrations.rs  mod.rs  repository.rs  schema.sql
src-tauri/src/tray/: error.rs  handlers.rs  icons.rs  menu.rs  mod.rs
src-tauri/tests/fixtures/: claude_empty.json  claude_invalid.json  claude_valid.json
(+590 files in other folders)
