[package]
name = "client"
version = "0.1.0"
description = "Mantra - AI 编程过程资产与方法论分享社区客户端"
authors = ["Mantra Team <team@mantra.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5"
regex = "1.10"
urlencoding = "2.1"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
