[package]
name = "client"
version = "0.6.0"
description = "Mantra - AI 编程过程资产与方法论分享社区客户端"
authors = ["Mantra Team <team@mantra.dev>"]
edition = "2021"
homepage = "https://mantra.gonewx.com"
documentation = "https://docs.mantra.gonewx.com"
repository = "https://github.com/mantra-dev/mantra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
keyring = { version = "3", optional = true }
hostname = "0.4"
regex = "1.10"
urlencoding = "2.1"
once_cell = "1.19"
lru = "0.12"
toml = "0.8"
toml_edit = "0.22"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[features]
default = []
keyring = ["dep:keyring"]

[dev-dependencies]
proptest = "1.4"
wiremock = "0.6"
